--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,25 @@
 <resources>
     <string name="app_name">FEUP for Students</string>
 
+    <string name="login">Login</string>
+    <string name="username">Utilizador</string>
+    <string name="password">Password</string>
+    <string name="is_it_safe">É seguro fazer login?</string>
+    <string name="is_it_safe_tooltip">Os dados introduzidos acima são guardados apenas no dispositivo e encriptados pelo sistema KeyStore do Android.\n
+        O criador desta aplicação não tem qualquer acesso a estes dados.\n
+        O código source desta aplicação encontra-se disponivel na totalidade  no GitHub para consulta.</string>
+    <string name="more">Saber mais</string>
+    <string name="no_username">Username vazio</string>
+    <string name="no_password">Password vazia</string>
 
     <string name="home">Início</string>
     <string name="content">Conteúdo</string>
     <string name="options">Opções</string>
+    <string name="no_login">Login Inválido</string>
 
     <string name="add">Adicionar</string>
     <string name="github">GitHub</string>
+    <string name="change_login">Mudar Login</string>
     <string name="feedback">Feedback</string>
     <string name="about">Sobre</string>
     <string name="credits">Créditos</string>
@@ -16,9 +28,9 @@
     <string name="invalid_name">Nome Inválido</string>
     <string name="cancel">Cancelar</string>
     <string name="about_text">Desenvolvido por:\n\t\t\tPaulo Correia\n\n
-        Agradecimentos:\n\t\t\tAna Miranda\n\t\t\tAntónio Carreio\n\t\t\tSérgio Faria\n\n
+        Agradecimentos:\n\t\t\tAna Miranda\n\t\t\tAntónio Carreiro\n\t\t\tSérgio Faria\n\n
         Aplicação não afiliada com a Universidade do Porto ou a FEUP.\n
-        Para mais informações consultar a página no GitHub do projecto.</string>
+        Para mais informações consultar a página GitHub do projecto.</string>
 
     <string name="downloading_file">A iniciar a transferencia</string>
     <string name="downloading_description">A transferir...</string>
